<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project: Forest violations
  ~ Purpose: Mobile application for registering facts of the forest violations.
  ~ Author:  Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2015-2015. NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/general"
        android:key="general">
        <ListPreference
            android:title="@string/theme"
            android:key="theme"
            android:defaultValue="light"
            android:entries="@array/theme"
            android:entryValues="@array/theme_val"/>
        <CheckBoxPreference
            android:title="@string/sync_switch"
            android:key="sync_periodically"
            android:defaultValue="true"/>
        <ListPreference
            android:title="@string/sync_interval"
            android:key="sync_period"
            android:defaultValue="3600"
            android:entries="@array/sync_periods"
            android:entryValues="@array/sync_periods_val"/>
        <Preference
            android:title="@string/click_to_change_account"
            android:key="change_account"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_map"
        android:key="map">
        <CheckBoxPreference
            android:key="show_status_panel"
            android:title="@string/show_status_panel"
            android:defaultValue="false"
            android:summary="@string/show_status_panel_summary"
            />
        <ListPreference
            android:key="show_current_location"
            android:title="@string/show_current_location"
            android:defaultValue="3"
            android:entries="@array/current_location_mode"
            android:entryValues="@array/current_location_mode_val"
            />
        <CheckBoxPreference
            android:key="keep_screen_on"
            android:title="@string/keep_screen_on"
            android:defaultValue="false"
            android:summary="@string/keep_screen_on_summary"
            />
        <CheckBoxPreference
            android:key="show_zoom_controls"
            android:title="@string/show_zoom_controls"
            android:defaultValue="false"
            android:summary="@string/show_zoom_controls_summary"
            />
        <ListPreference
            android:key="coordinates_format"
            android:title="@string/coordinates_format"
            android:summary="@string/coordinates_format_summary"
            android:defaultValue="0"
            android:entries="@array/coordinates_format"
            android:entryValues="@array/coordinates_format_val"
            android:dialogTitle="@string/select_coordinates_format"
            />
    </PreferenceCategory>

</PreferenceScreen>