<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project: Forest violations
  ~ Purpose: Mobile application for registering facts of the forest violations.
  ~ Author:  Stanislav Petriakov, becomeglory@gmail.com
  ~ *****************************************************************************
  ~ Copyright (c) 2016 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id"
                style="@style/message_view_text"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/date"
                style="@style/message_view_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"/>
        </LinearLayout>

        <TextView
            style="@style/paragraph_text"
            android:text="@string/inspector"/>

        <TextView
            android:id="@+id/author"
            style="@style/message_view_text"/>

        <TextView
            style="@style/paragraph_text"
            android:text="@string/status_paragraph"/>

        <TextView
            android:id="@+id/status"
            style="@style/message_view_text"/>

        <TextView
            style="@style/paragraph_text"
            android:text="@string/type_paragraph"/>

        <TextView
            android:id="@+id/type"
            style="@style/message_view_text"
            />

        <TextView
            style="@style/paragraph_text"
            android:text="@string/violate"/>

        <TextView
            android:id="@+id/violate"
            style="@style/message_view_text"/>

        <TextView
            style="@style/paragraph_text"
            android:text="@string/place"/>

        <TextView
            android:id="@+id/place"
            style="@style/message_view_text"/>

        <TextView
            style="@style/paragraph_text"
            android:text="@string/date_pick"/>

        <TextView
            android:id="@+id/date_pick"
            style="@style/message_view_text"/>

        <TextView
            style="@style/paragraph_text"
            android:text="@string/date_violate"/>

        <TextView
            android:id="@+id/date_violate"
            style="@style/message_view_text"/>

        <TextView
            style="@style/paragraph_text"
            android:text="@string/forest_category"/>

        <TextView
            android:id="@+id/forest_category"
            style="@style/message_view_text"/>

        <TextView
            style="@style/paragraph_text"
            android:text="@string/territory"/>

        <TextView
            android:id="@+id/territory"
            style="@style/message_view_text"/>

        <TextView
            style="@style/paragraph_text"
            android:text="@string/region"/>

        <TextView
            android:id="@+id/region"
            style="@style/message_view_text"/>
    </LinearLayout>
</ScrollView>