<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project: Forest violations
  ~ Purpose: Mobile application for registering facts of the forest violations.
  ~ Author:  Stanislav Petriakov, becomeglory@gmail.com
  ~ *****************************************************************************
  ~ Copyright (c) 2016 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_legend_own"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_legend_own"
            android:text="@string/own"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_legend_others"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_legend_others"
            android:text="@string/others"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_legend_violation"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_legend_violation"
            android:text="@string/space"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_legend_felling"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_legend_felling"
            android:text="@string/felling_legend"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_legend_fire"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_legend_fire"
            android:text="@string/fire_legend"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_legend_garbage"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_legend_garbage"
            android:text="@string/garbage_legend"/>
    </LinearLayout>
</ScrollView>