<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project: Forest violations
  ~ Purpose: Mobile application for registering facts of the forest violations.
  ~ Author:  Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ Author:  NikitaFeodonit, nfeodonit@yandex.com
  ~ Author:  Stanislav Petriakov, becomeglory@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2015-2016 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_action_apply_dark"
        android:orderInCategory="0"
        android:title="@string/done"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_center"
        android:icon="@drawable/ic_image_filter_center_focus_white_24dp"
        android:orderInCategory="1"
        android:title="@string/title_center_point"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_locate"
        android:icon="@drawable/ic_my_location_white_24dp"
        android:orderInCategory="2"
        android:title="@string/title_current_location"
        app:showAsAction="ifRoom"/>
</menu>